# lerobot

./: pyproject.toml  无本体数据采集平台-模块化设计文档.md
configs/record/: embodiment_free_p0.yaml  steamvr_tracker_only.yaml  wrist_fisheye_capture.yaml
docs/specs/: embodiment_free_p0_demo_requirements.md  wrist_fisheye_minimal_demo_spec.md
examples/airbot_play_vr/: README.md  record.py  teleoperate.py
src/lerobot/common/: airbot_play_vr.py
src/lerobot/datasets/: video_utils.py
src/lerobot/robots/: utils.py
src/lerobot/robots/airbot_play/: __init__.py  airbot_play.py  config_airbot_play.py
src/lerobot/robots/capture_rig/: __init__.py  capture_rig.py  config_capture_rig.py
src/lerobot/scripts/: lerobot_dataset_viz.py  lerobot_record.py
src/lerobot/teleoperators/: utils.py
src/lerobot/teleoperators/airbot_vr/: __init__.py  airbot_vr.py  config_airbot_vr.py
src/lerobot/teleoperators/composite/: __init__.py  composite.py  config_composite.py
src/lerobot/teleoperators/noop/: __init__.py  config_noop.py  noop.py
src/lerobot/teleoperators/steamvr_tracker/: __init__.py  config_steamvr_tracker.py  steamvr_tracker.py
src/lerobot/utils/: import_utils.py
tests/robots/: test_airbot_play.py
tests/teleoperators/: test_airbot_vr.py  test_steamvr_tracker.py  test_udp_glove.py
udexreal_dc/: airbot_vr_lerobot_review.md  airbot_vr_lerobot_technical_plan.md  airbot_vr_lerobot_test.md
udexreal_dc/assistant4/embodied/SteamMode/: CMakeLists.txt  DpnPlatformSDK.cpp  ReadMe.txt  SteamMode.cpp  arm_comm.cpp  arm_comm.h  ltw.txt  stdafx.cpp  stdafx.h
(+20 files in other folders)
